--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div data-aos="fade-left" data-aos-duration="1000" data-aos-once="true" class="col-md-6 flex-md-last">
                     <h2 class="font-weight-bold">Safe and reliable</h2>
                     <p class="my-4">
-                        Duo suas detracto maiestatis ad, commodo lucilius invenire nec ad,
+                       Here we attach that lucilius invenire nec ad,
                         <br> eum et oratio disputationi. Falli lobortis his ad
                     </p>
                     <a href="#" class="btn my-4 font-weight-bold atlas-cta cta-blue">Learn More</a>
